--- a/package.json
+++ b/package.json
@@ -1,16 +1,25 @@
 {
-  "name": "miniprogram-ts-less-quickstart",
-  "version": "1.0.0",
-  "description": "",
-  "scripts": {},
-  "keywords": [],
-  "author": "",
-  "license": "",
-  "dependencies": {
-    "@vant/weapp": "^1.10.7",
-    "dayjs": "^1.11.6"
-  },
-  "devDependencies": {
-    "miniprogram-api-typings": "^3.6.0"
-  }
+    "name": "miniprogram-ts-less-quickstart",
+    "version": "1.0.0",
+    "description": "",
+    "scripts": {
+        "lint": "eslint . --ext .ts"
+    },
+    "keywords": [],
+    "author": "turbo <664120459@qq.com>",
+    "license": "MIT",
+    "dependencies": {
+        "@vant/weapp": "^1.10.7",
+        "dayjs": "^1.11.6"
+    },
+    "devDependencies": {
+        "@typescript-eslint/eslint-plugin": "^5.43.0",
+        "@typescript-eslint/parser": "^5.43.0",
+        "eslint": "^8.28.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "miniprogram-api-typings": "^3.6.0",
+        "prettier": "^2.7.1",
+        "typescript": "^4.9.3"
+    },
+    "repository": "git@github.com:ziguilp/miniapp-example.git"
 }
