--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "license": "MIT",
     "dependencies": {
         "@vant/weapp": "^1.10.7",
-        "dayjs": "^1.11.6"
+        "crypto-js": "^4.1.1",
+        "dayjs": "^1.11.6",
+        "js-base64": "^3.7.3"
     },
     "devDependencies": {
+        "@types/crypto-js": "^4.1.1",
         "@types/uuid": "^8.3.4",
         "@typescript-eslint/eslint-plugin": "^5.43.0",
         "@typescript-eslint/parser": "^5.43.0",
